--- a/OnTheMap/Assets/Base.lproj/Main.storyboard
+++ b/OnTheMap/Assets/Base.lproj/Main.storyboard
@@ -39,13 +39,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="270" height="40"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="koR-eW-mjK">
                                         <rect key="frame" x="0.0" y="50" width="270" height="40"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxT-Dy-eTF">
                                         <rect key="frame" x="0.0" y="100" width="270" height="40"/>
@@ -161,7 +161,7 @@
                                         <rect key="frame" x="0.0" y="50" width="270" height="40"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="URL"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmG-bc-gnh">
                                         <rect key="frame" x="0.0" y="100" width="270" height="40"/>
@@ -169,6 +169,9 @@
                                         <state key="normal" title="FIND LOCATION">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="finishAddLocation" destination="P8K-rU-IjA" eventType="touchUpInside" id="qxh-4m-U5P"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -204,14 +207,83 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="emailTextField" destination="w4H-HV-NYk" id="0rZ-ow-hOj"/>
                         <outlet property="findLocationButton" destination="mmG-bc-gnh" id="oo8-q5-azz"/>
-                        <outlet property="locationTextField" destination="Yag-Zg-hkj" id="IN1-bG-GcB"/>
+                        <outlet property="locationTextField" destination="w4H-HV-NYk" id="gfu-BT-YUK"/>
+                        <outlet property="urlTextField" destination="Yag-Zg-hkj" id="n8X-qL-t9D"/>
+                        <segue destination="ImZ-Mf-UBn" kind="show" identifier="finishAddLocation" id="sjl-NP-RmL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t2G-dq-a9B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1478" y="1085"/>
+            <point key="canvasLocation" x="1478" y="1105"/>
+        </scene>
+        <!--Add Location-->
+        <scene sceneID="dxv-P6-UuF">
+            <objects>
+                <viewController id="ImZ-Mf-UBn" customClass="FinishAddLocationViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="X4W-cs-r2h">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RoU-ON-ac2">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoi-UN-B3n">
+                                <rect key="frame" x="25" y="488" width="270" height="40"/>
+                                <color key="backgroundColor" red="0.0078431372550000003" green="0.70196078429999997" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="j1U-Qb-XcU"/>
+                                </constraints>
+                                <state key="normal" title="FINISH">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="finishAddLocation:" destination="ImZ-Mf-UBn" eventType="touchUpInside" id="Yqv-bL-SGi"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RoU-ON-ac2" firstAttribute="bottom" secondItem="KfI-Ex-alJ" secondAttribute="bottom" id="1Wp-64-M4E"/>
+                            <constraint firstItem="KfI-Ex-alJ" firstAttribute="bottom" secondItem="qoi-UN-B3n" secondAttribute="bottom" constant="40" id="2DU-7o-cmo">
+                                <variation key="heightClass=compact-widthClass=compact" constant="20"/>
+                            </constraint>
+                            <constraint firstItem="KfI-Ex-alJ" firstAttribute="bottom" secondItem="RoU-ON-ac2" secondAttribute="bottom" id="7OQ-Yf-gbf"/>
+                            <constraint firstItem="qoi-UN-B3n" firstAttribute="leading" secondItem="KfI-Ex-alJ" secondAttribute="leading" constant="25" id="AF1-Pm-WCW">
+                                <variation key="heightClass=compact-widthClass=compact" constant="130"/>
+                            </constraint>
+                            <constraint firstItem="RoU-ON-ac2" firstAttribute="leading" secondItem="KfI-Ex-alJ" secondAttribute="leading" id="JmU-Zu-WJ9"/>
+                            <constraint firstItem="RoU-ON-ac2" firstAttribute="top" secondItem="KfI-Ex-alJ" secondAttribute="top" id="Ujd-rc-dV1"/>
+                            <constraint firstItem="KfI-Ex-alJ" firstAttribute="trailing" secondItem="qoi-UN-B3n" secondAttribute="trailing" constant="25" id="nqz-NN-elx">
+                                <variation key="heightClass=compact-widthClass=compact" constant="130"/>
+                            </constraint>
+                            <constraint firstItem="RoU-ON-ac2" firstAttribute="trailing" secondItem="KfI-Ex-alJ" secondAttribute="trailing" id="s5W-41-15a"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="KfI-Ex-alJ"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Location" id="xVd-99-Dx1">
+                        <barButtonItem key="leftBarButtonItem" style="done" id="jdJ-91-omd">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Ode-xE-xuZ">
+                                <rect key="frame" x="16" y="10" width="132" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Add Location" image="icon_back-arrow">
+                                    <color key="titleColor" red="0.0078431372550000003" green="0.70196078429999997" blue="0.89411764709999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="goToAddLocationViewController" destination="ImZ-Mf-UBn" eventType="touchUpInside" id="Ax6-LD-XmO"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="finishButton" destination="qoi-UN-B3n" id="VkO-V3-BxZ"/>
+                        <outlet property="mapView" destination="RoU-ON-ac2" id="vWI-ie-0Me"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m13-hZ-3Lk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1478" y="1923"/>
         </scene>
         <!--Locations Table View Controller-->
         <scene sceneID="h9W-zX-MVW">
@@ -305,6 +377,7 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pu0-ua-U8l">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -337,6 +410,7 @@
     </scenes>
     <resources>
         <image name="icon_addpin" width="24" height="24"/>
+        <image name="icon_back-arrow" width="24" height="24"/>
         <image name="icon_listview-deselected" width="75" height="50"/>
         <image name="icon_listview-selected" width="75" height="50"/>
         <image name="icon_mapview-deselected" width="75" height="50"/>
